<resources>
    <string name="app_name">Cadastro de Eleitores e Candidatos</string>
    <string name="etnome" />
    <string name="etnomemae" />
    <string name="etdata" />
    <string name="etnumero" />
    <string name="etzona" />
    <string name="etsecao" />
    <string name="etmunicipio" />
    <string name="btsalvareleitor">SALVAR</string>
    <string name="btalterareleitor">ALTERAR</string>
    <string name="btapagareleitor">APAGAR</string>
    <string name="nomeeleitor" />
    <string name="nomemaeeleitor" />
    <string name="numeroeleitor" />
    <string name="secaoeleitor" />
    <string name="zonaeleitor" />
    <string name="tvdados">Gabriel de Almeida Barros - V 1.0</string>
    <string name="title_activity_lista_evento">Lista de Eleitores</string>
    <string name="etmunicipioeleitor" />
    <string name="nomeeleitorhint">Nome do Eleitor</string>
    <string name="maeeleitorhint">Nome da Mãe</string>
    <string name="dataeleitorhint">DD/MM/YYYY</string>
    <string name="tituloeleitorhint">Número do Título</string>
    <string name="zonaeleitorhint">Zona</string>
    <string name="secaoeleitoralhint">Seção</string>
    <string name="municipioeleitorhint">Munícipio de Origem</string>
    <string name="tvnomeeleitor">Nome:</string>
    <string name="tvnumeroeleitor">Número do Título:</string>
    <string name="tvsecaoeleitoral">Seção:</string>
    <string name="tvzonaeleitor">Zona:</string>
    <string name="etestado" />
    <string name="etestado2">Eatado</string>
    <string name="tvnomecandidato" />
    <string name="tvpartidocandidato" />
    <string name="tvnumerocandidato" />
    <string name="tvcargocandidato" />
</resources>
